# oss_Multi_agent_ai

./: .env  Feedback.md  README.md  docker-compose.yml  multi_agent_protocol_course.md  package-lock.json  package.json  requirements.txt  setup.sh
01_theory_foundation/week01_multi_agent_overview/: README.md  multi_agent_problems.py  single_agent_demo.py
02_hands_on_practice/week05_06_mcp_project/: README.md  package.json
02_hands_on_practice/week07_08_a2a_project/: README.md
02_hands_on_practice/week09_10_agp_project/: README.md
02_hands_on_practice/week09_10_agp_project/examples/: workflow_example.py
02_hands_on_practice/week09_10_agp_project/gateway/: Cargo.toml  build.rs
02_hands_on_practice/week09_10_agp_project/gateway/proto/: agp.proto  health.proto
02_hands_on_practice/week09_10_agp_project/gateway/src/: auth.rs  gateway.rs  main.rs  router.rs
02_hands_on_practice/week11_12_acp_project/: README.md
03_advanced_topics/week13_performance_benchmarking/: README.md  benchmark_results.json  benchmark_suite.py
03_advanced_topics/week14_security_reliability/: README.md
docs/: 기말_개인프로젝트_가이드.md  실습_가이드.md
slides/01_theory_foundation/: week01_multiagent_overview.md  week02_mcp_deep_dive.md  week03_a2a_analysis.md  week04_agp_acp_exploration.md
slides/02_hands_on_practice/: week05_06_mcp_project.md  week07_08_a2a_project.md  week09_10_agp_project.md  week11_12_acp_project.md
slides/03_advanced_topics/: week13_performance_benchmarking.md  week14_security_reliability.md
tutorial/a2a_tutorial/: echo_agent_py.py
(+5 files in other folders)
