[package]
name = "agp-gateway"
version = "0.1.0"
edition = "2021"
description = "Agent Gateway Protocol implementation for Week 9-10 Project"
authors = ["Multi-Agent Protocol Course"]
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "0.14"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "gateway"
path = "src/main.rs"

 